# btcmon

./: Cargo.toml  README.md
.github/workflows/: rust.yml
share/config/: example-multiple.toml  example.toml
src/: app.rs  bitcoin.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs  widget.rs
src/fees/: mod.rs
src/fees/providers/: mod.rs
src/node/: mod.rs  node.rs  widgets.rs
src/node/providers/: bitcoin_core.rs  core_lightning.rs  lnd.rs  mod.rs
src/price/: mod.rs  price.rs
src/price/providers/: coinbase.rs
src/price/strategies/: coinbase.rs
src/ui/: fees.rs  mod.rs  node.rs  price.rs
