[package]
name = "btcmon"
version = "0.1.0"
authors = ["fran <jfrader@pm.me>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.27.0"
tokio = { version = "1.35.1", features = ["full"] }
bitcoincore-rpc = "0.19.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = "1.0.203"
zeromq = "0.4.0"
argmap = "1.1.2"
config = "0.14.0"
serde_derive = "1.0"
home = "0.5.9"
throbber-widgets-tui = "0.6.0"
